--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                      ธัญธนาโภคิน
                   </h1>
                   <p class="text-xl md:text-2xl font-medium text-red-600 italic">
-                     “ เปลี่ยนโรงเรียนให้ดีกว่า ด้วยพลังของพวกเรา ”
+                     “ ทำต่อเพื่อการพัฒนา ”
                   </p>
                </div>
 
@@ -635,7 +635,7 @@
                      วรฤทัย เพ่งพิศ
                   </h1>
                   <p class="text-xl md:text-2xl font-medium text-red-600 italic">
-                     “ เปลี่ยนโรงเรียนให้ดีกว่า ด้วยพลังของพวกเรา ”
+                     “ 30 มกรา เข้าคูหากาเบอร์ 1 ”
                   </p>
                </div>
 
@@ -1178,6 +1178,7 @@
 </script>
 </body>
 </html>
+
 
 
 
