--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
          <div class="flex flex-col md:flex-row items-stretch">
             
             <div class="w-full md:w-1/2 relative flex items-end justify-center md:justify-start mb-12 md:mb-0">
-               <img src="https://img2.pic.in.th/109fe65a5034727c8.png" 
+               <img src="https://img2.pic.in.th/IMG_40816c18cdc3f7bbdb6e.png" 
                     class="relative z-5 w-auto h-[550px] md:h-[800px] object-contain object-bottom drop-shadow-xl translate-x-4 md:translate-x-12"
                     alt="Candidate">
             </div>
@@ -768,7 +768,7 @@
       member_2_role: "รองประธานนักเรียน",
       member_2_classroom: "ชั้นมัธยมศึกษาปีที่ 5/2",
       member_2_history: "- คณะกรรมการนักเรียนปีการศึกษา 2568 ตำแหน่ง ประชาสัมพันธ์",
-      member_2_image: "https://img2.pic.in.th/-----dd53a4c9f4f27acb.jpg",
+      member_2_image: "https://img5.pic.in.th/file/secure-sv1/-----086ec1273848a4ec.jpeg",
 
       member_3_name: "น.ส.วรฤทัย เพ่งพิศ",
       member_3_role: "รองประธานนักเรียน",
@@ -813,7 +813,7 @@
       member_10_name: "น.ส.ณัฐฎาภรณ์ ภานุโสภา",
       member_10_role: "กิจกรรมภายใน",
       member_10_classroom: "ชั้นมัธยมศึกษาปีที่ 4/4",
-      member_10_image: "https://img5.pic.in.th/file/secure-sv1/-----35933af50d708faf.jpg",
+      member_10_image: "https://img2.pic.in.th/IMG_4082.jpeg",
 
       member_11_name: "น.ส.ชญาพร ลิลาคุณารักษ์",
       member_11_role: "กิจกรรมวิชาการ",
@@ -838,7 +838,7 @@
       member_15_name: "น.ส.ชิชา ศรีมงคล",
       member_15_role: "สถานที่",
       member_15_classroom: "ชั้นมัธยมศึกษาปีที่ 5/2",
-      member_15_image: "",
+      member_15_image: "https://img5.pic.in.th/file/secure-sv1/-----a808a6b465875750.jpeg",
 
       member_16_name: "น.ส.นิรดา พันธ์ทอง",
       member_16_role: "ประชาสัมพันธ์และสื่อสารองค์กร",
@@ -891,7 +891,7 @@
       member_25_name: "น.ส.รุจีรัตน์ นามวิชา",
       member_25_role: "สารสนเทศและออกแบบ",
       member_25_classroom: "ชั้นมัธยมศึกษาปีที่ 5/13",
-      member_25_image: "",
+      member_25_image: "https://img2.pic.in.th/IMG_4082.jpeg",
 
       member_26_name: "น.ส.พนัชกร คงอยู่",
       member_26_role: "สารสนเทศและออกแบบ",
@@ -912,7 +912,7 @@
       member_29_role: "สารวัตรนักเรียน",
       member_29_classroom: "ชั้นมัธยมศึกษาปีที่ 5/5",
       member_29_history: "- คณะกรรมการนักเรียนปีการศึกษา 2568 ตำแหน่ง แผนงานและนโยบาย",
-      member_29_image: "",
+      member_29_image: "https://img5.pic.in.th/file/secure-sv1/----7f7ae2d9eecb35c5.jpeg",
 
       member_30_name: "นายวรกณต์ บุญพันธ์",
       member_30_role: "สารวัตรนักเรียน",
@@ -1178,6 +1178,7 @@
 </script>
 </body>
 </html>
+
 
 
 
