--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
       member_10_name: "น.ส.ณัฐฎาภรณ์ ภานุโสภา",
       member_10_role: "กิจกรรมภายใน",
       member_10_classroom: "ชั้นมัธยมศึกษาปีที่ 4/4",
-      member_10_image: "https://img2.pic.in.th/IMG_4082.jpeg",
+      member_10_image: "https://img5.pic.in.th/file/secure-sv1/IMG_407928804fb4d3844903.jpeg",
 
       member_11_name: "น.ส.ชญาพร ลิลาคุณารักษ์",
       member_11_role: "กิจกรรมวิชาการ",
@@ -1178,6 +1178,7 @@
 </script>
 </body>
 </html>
+
 
 
 
