--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <button class="nav-link-mobile font-medium text-lg text-left py-2 border-b border-gray-100/20" onclick="showPage('home'); toggleMobileMenu()">หน้าหลัก</button> 
         <button class="nav-link-mobile font-medium text-lg text-left py-2 border-b border-gray-100/20" onclick="showPage('policies'); toggleMobileMenu()">นโยบาย</button> 
         <button class="nav-link-mobile font-medium text-lg text-left py-2" onclick="showPage('team'); toggleMobileMenu()">สมาชิก</button>
-        <button class="nav-link-mobile font-medium text-lg text-left py-2 border-t border-gray-100/20" onclick="showPage('candidate'); toggleMobileMenu()">ผู้นำพรรค/button>
+        <button class="nav-link-mobile font-medium text-lg text-left py-2 border-t border-gray-100/20" onclick="showPage('candidate'); toggleMobileMenu()">ผู้นำพรรค</button>
      </div>
     </div>
    </nav>
@@ -1178,6 +1178,7 @@
 </script>
 </body>
 </html>
+
 
 
 
