--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
          <div class="flex flex-col md:flex-row items-stretch">
             
             <div class="w-full md:w-1/2 relative flex items-end justify-center md:justify-start mb-12 md:mb-0">
-               <img src="https://img2.pic.in.th/385c7aa5c63b5067a.png" 
+               <img src="https://img5.pic.in.th/file/secure-sv1/Untitled-design-119375bcc3ee26bb28.png" 
                     class="relative z-5 w-auto h-[550px] md:h-[800px] object-contain object-bottom drop-shadow-xl translate-x-4 md:translate-x-12"
                     alt="Candidate">
             </div>
@@ -761,7 +761,7 @@
       member_1_name: "น.ส.พนมแก้ว ภิญโญ",
       member_1_role: "ประธานนักเรียน",
       member_1_classroom: "ชั้นมัธยมศึกษาปีที่ 5/4",
-      member_1_image: "https://img2.pic.in.th/Untitled-design-9.png",
+      member_1_image: "https://img5.pic.in.th/file/secure-sv1/S__44302466.jpg",
       member_1_history: "- คณะกรรมการนักเรียนปีการศึกษา 2568 ตำแหน่ง กิจกรรมวิชาการ\n - เลขานุการคณะสีเขียว ราชวดีเกมส์ ปีการศึกษา 2568",
 
       member_2_name: "น.ส.กรฌ์ณภัทรส์ ธัญธนาโภคิน",
@@ -808,14 +808,14 @@
       member_9_name: "น.ส.ชญานิศ หุวสมิต",
       member_9_role: "กิจกรรมภายนอก",
       member_9_classroom: "ชั้นมัธยมศึกษาปีที่ 4/13",
-      member_9_image: "https://img5.pic.in.th/file/secure-sv1/-----e44e826f647034ef.jpg",
+      member_9_image: "https://img2.pic.in.th/S__7798827.jpg",
 
-      member_10_name: "น.ส.ณัฐฎาภรณ์ ภานุโสภา",
+      member_10_name: "น.ส.ณัฐญาภรณ์ ภานุโสภา",
       member_10_role: "กิจกรรมภายใน",
       member_10_classroom: "ชั้นมัธยมศึกษาปีที่ 4/4",
       member_10_image: "https://img5.pic.in.th/file/secure-sv1/IMG_407928804fb4d3844903.jpeg",
 
-      member_11_name: "น.ส.ชญาพร ลิลาคุณารักษ์",
+      member_11_name: "น.ส.ชญาพร ลีลาคุณารักษ์",
       member_11_role: "กิจกรรมวิชาการ",
       member_11_classroom: "ชั้นมัธยมศึกษาปีที่ 4/8",
       member_11_image: "https://img5.pic.in.th/file/secure-sv1/---d324941ded77f4d7.jpg",
@@ -828,12 +828,12 @@
       member_13_name: "น.ส.ปภาดา จำปาหอม",
       member_13_role: "สถานที่",
       member_13_classroom: "ชั้นมัธยมศึกษาปีที่ 5/4",
-      member_13_image: "https://img2.pic.in.th/-----4347f866b33fb593.jpg",
+      member_13_history: "- เลขานุการคณะสีเขียว ราชวดีเกมส์ ปีการศึกษา 2568",
 
       member_14_name: "น.ส.ณัฎฐ์ภัสสร โพธิ์เทศ",
       member_14_role: "สถานที่",
       member_14_classroom: "ชั้นมัธยมศึกษาปีที่ 5/2",
-      member_14_image: "https://img5.pic.in.th/file/secure-sv1/-----3a498effeb5a91b8.jpg",
+      member_14_image: "https://img5.pic.in.th/file/secure-sv1/S__60006410.jpg",
 
       member_15_name: "น.ส.ชิชา ศรีมงคล",
       member_15_role: "สถานที่",
@@ -1178,6 +1178,7 @@
 </script>
 </body>
 </html>
+
 
 
 
