--- a/index.html
+++ b/index.html
@@ -828,6 +828,7 @@
       member_13_name: "น.ส.ปภาดา จำปาหอม",
       member_13_role: "สถานที่",
       member_13_classroom: "ชั้นมัธยมศึกษาปีที่ 5/4",
+      member_13_image: "https://img2.pic.in.th/123106.jpg",
       member_13_history: "- เลขานุการคณะสีเขียว ราชวดีเกมส์ ปีการศึกษา 2568",
 
       member_14_name: "น.ส.ณัฎฐ์ภัสสร โพธิ์เทศ",
@@ -1178,6 +1179,7 @@
 </script>
 </body>
 </html>
+
 
 
 
